Vertical align chevron, fix hover padding

--- a/src/components/Followers/FollowerDetails/FollowerDetails.css
+++ b/src/components/Followers/FollowerDetails/FollowerDetails.css
@@ -1,8 +1,13 @@
 .user-card {
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 7px 20px;
   box-shadow: 0px 10px 15px -2px rgba(0,0,0,0.06);
+  vertical-align: center;
+}
+
+.user-card svg {
+  margin-top: 5px;
 }
 
 .user-card * {
